--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,39 @@ img.meme:hover{
 .header-banner .title{
   font-size: 24px
 }
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.3);
+  padding: 50px;
+}
+
+.modal{
+  position: relative;
+  background-color: #fff;
+  border-radius: 5px;
+  max-width: 500px;
+  min-height: 200px;
+  margin: 0 auto;
+  padding: 30px
+}
+
+.modal .close{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.modal input{
+  border-style: solid;
+  border-width: 2px;
+  padding: 2px 5px;
+}
+
+.modal div{
+  padding-bottom: 10px
+}
